Avoid unnecessarily hiding `#results`
The fact that this was hidden by default was a hangover from the
previous single-page implementation. It now only appears on the results
page so can be shown by default.

--- a/src/stylesheets/results.css
+++ b/src/stylesheets/results.css
@@ -25,7 +25,7 @@ footer {
   padding: 15px;
   text-align: right;
 }
-#results, #errors {
+#errors {
   display: none;
 }
 #file-upload {
